# server/controllers/course_controller.go
@@ -2,6 +2,10 @@ package controllers
 
 import (
 	"context"
+	"fmt"
+	"io"
+
+	//"io/ioutil" Depracated
 	"net/http"
 	"server/configs"
 	"server/data/responses"
@@ -33,7 +37,8 @@ var courseCollection *mongo.Collection = configs.GetCoursesCollection(configs.DB
 // CreateTags		godoc
 // @Summary			By Admin only: Create Course
 // @Description		Creating a Course
-// @Param			Course body requests.CreateCoursesRequest true "course"
+// @Param			Course formData file true "videoSrc" // Assuming "videoSrc" is the name of your file input field
+// @Param           Course body requests.CreateCoursesRequest true "course JSON data"
 // @Produce			application/json
 // @Course			courses
 // @Success			200 {object} responses.Response{}
@@ -43,13 +48,31 @@ func CreateCourse() gin.HandlerFunc {
 		ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
 		var course models.Course
 		defer cancel()
+		err := c.Request.ParseMultipartForm(100 << 20) // 10 MB max size
+		fmt.Print(c.Request.ParseMultipartForm(100 << 20))
+		if err != nil {
+			c.JSON(http.StatusBadRequest, responses.CourseResponse{Status: http.StatusBadRequest, Message: "error", Data: map[string]interface{}{"data": err.Error()}})
+			return
+		}
+		// Retrieve the file from the form data
+		file, _, err := c.Request.FormFile("videoSrc")
+		if err != nil {
+			c.JSON(http.StatusBadRequest, responses.CourseResponse{Status: http.StatusBadRequest, Message: "error", Data: map[string]interface{}{"data": err.Error()}})
+			return
+		}
+		defer file.Close()
 
+		// Read the file content into a byte slice
+		videoData, err := io.ReadAll(file)
+		if err != nil {
+			c.JSON(http.StatusInternalServerError, responses.CourseResponse{Status: http.StatusInternalServerError, Message: "error", Data: map[string]interface{}{"data": err.Error()}})
+			return
+		}
 		//validate the request body
 		if err := c.BindJSON(&course); err != nil {
 			c.JSON(http.StatusBadRequest, responses.CourseResponse{Status: http.StatusBadRequest, Message: "error", Data: map[string]interface{}{"data": err.Error()}})
 			return
 		}
-
 		//use the validator library to validate required fields
 		if validationErr := validate.Struct(&course); validationErr != nil {
 			c.JSON(http.StatusBadRequest, responses.CourseResponse{Status: http.StatusBadRequest, Message: "error", Data: map[string]interface{}{"data": validationErr.Error()}})
@@ -61,7 +84,7 @@ func CreateCourse() gin.HandlerFunc {
 			Sypnopsis:           course.Sypnopsis,
 			Duration:            course.Duration,
 			Status:              course.Status,
-			VideoSrc:            course.VideoSrc,
+			VideoSrc:            videoData,
 			VideoDescription:    course.VideoDescription,
 			MaterialSrc:         course.MaterialSrc,
 			MaterialDescription: course.MaterialDescription,
